# ircc

./: .gitignore  CMakeLists.txt  README.md  ircc
example/: CMakeLists.txt  main.cpp  server
example/web/: index.html  one_yet_page.html
src/: ircc.h  main.cpp
test/: CMakeLists.txt  build.sh  ircc_resources.gen1.cpp  ircc_resources.gen2.cpp  main.c  main.cpp  resources.txt  runtest1  runtest2
